; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/opengl32/extr_swimpl.c_sw_DeleteContext.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/opengl32/extr_swimpl.c_sw_DeleteContext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sw_context = type { i32 }

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sw_DeleteContext(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.sw_context*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = inttoptr i64 %6 to %struct.sw_context*
  store %struct.sw_context* %7, %struct.sw_context** %3, align 8
  %8 = call i8* (...) @IntGetCurrentICDPrivate()
  store i8* %8, i8** %4, align 8
  %9 = call i32* (...) @IntGetCurrentDispatchTable()
  store i32* %9, i32** %5, align 8
  %10 = load %struct.sw_context*, %struct.sw_context** %3, align 8
  %11 = getelementptr inbounds %struct.sw_context, %struct.sw_context* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @gl_destroy_context(i32 %12)
  %14 = call i32 (...) @GetProcessHeap()
  %15 = load %struct.sw_context*, %struct.sw_context** %3, align 8
  %16 = call i32 @HeapFree(i32 %14, i32 0, %struct.sw_context* %15)
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @IntSetCurrentDispatchTable(i32* %17)
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @IntSetCurrentICDPrivate(i8* %19)
  %21 = load i32, i32* @TRUE, align 4
  ret i32 %21
}

declare dso_local i8* @IntGetCurrentICDPrivate(...) #1

declare dso_local i32* @IntGetCurrentDispatchTable(...) #1

declare dso_local i32 @gl_destroy_context(i32) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.sw_context*) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @IntSetCurrentDispatchTable(i32*) #1

declare dso_local i32 @IntSetCurrentICDPrivate(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
